# gemma-finetuning-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: lora_default.yaml  training_default.yaml
docs/: code-standards.md  project-overview-pdr.md  system-architecture.md  tech-stack.md
scripts/: __init__.py  benchmark.py  chat.py  check_env.py  export_tflite.py  prepare_dataset.py  train.py
src/gemma_finetune/: __init__.py  config.py
src/gemma_finetune/export/: __init__.py  bundle.py  converter.py  merge.py
src/gemma_finetune/inference/: __init__.py  chat.py  keras_inference.py  tflite_inference.py
src/gemma_finetune/training/: __init__.py  callbacks.py  config.py  data_pipeline.py  optimizer.py  trainer.py
src/gemma_finetune/utils/: __init__.py  gpu.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_data_pipeline.py
tests/unit/: test_data_converter.py  test_data_formatter.py  test_data_loader.py  test_data_schemas.py  test_models_config.py  test_training_config.py
