[project]
name = "gemma-finetune"
version = "0.1.0"
description = "End-to-end Gemma 3 1B finetuning pipeline with JAX/Keras and TFLite export"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tsnanh" }]
keywords = ["gemma", "finetuning", "lora", "jax", "keras", "tflite", "edge-deployment"]

dependencies = [
    "jax>=0.4.35",
    "keras>=3.7",
    "keras-hub>=0.18",
    "datasets>=3.0",
    "pandera>=0.21",
    "jsonlines>=4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.4.35",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1",
]
export = [
    "ai-edge-torch>=0.3",
    "tensorflow>=2.18",
]
all = [
    "gemma-finetune[dev,export,cuda]",
]

[project.scripts]
gemma-check-env = "scripts.check_env:main"
gemma-prepare-data = "scripts.prepare_dataset:main"
gemma-train = "scripts.train:main"
gemma-export = "scripts.export_tflite:main"
gemma-chat = "scripts.chat:main"
gemma-benchmark = "scripts.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_finetune"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src", "scripts"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "e2e: marks end-to-end tests",
    "quality: marks quality evaluation tests",
]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
